@@ -36,6 +36,7 @@ Version 3   ???
 
 --Added a settings file for adjusting mouse speed.
 
+--Added a half-second of immortality after rise-out.
 
 
 
